--- a/tools/app-faa/index.html
+++ b/tools/app-faa/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>NPS Survey, jQuery Survey Library Example</title><meta name="viewport" content="width=device-width"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+	   <link rel="stylesheet" href="https://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" /> 
+        <title>Compliance Check BMAC AMA Rules</title><meta name="viewport" content="width=device-width"/>
         <script src="https://unpkg.com/jquery"></script>
         <script src="https://unpkg.com/survey-jquery@1.9.26/survey.jquery.min.js"></script>
         <link href="https://unpkg.com/survey-core@1.9.26/defaultV2.min.css" type="text/css" rel="stylesheet"/>
-        <script type="text/javascript" src="./pengines.js"></script>
-        <script type="text/javascript" src="./index.js"></script>
-        <script type="text/javascript" src="./justification.js"></script>
-
+        <link rel="stylesheet" href="./index.css"></head>
+        <link rel="styleheet" href="./css/swish.css">
+        <link rel="stylesheet" href="./faa.css">
+        <style>
+            .treemenu li { list-style: none; }
+            .treemenu .toggler { cursor: pointer; }
+            .treemenu .toggler:before { display: inline-block; margin-right: 2pt; }
+            li.tree-empty > .toggler { opacity: 0.3; cursor: default; }
+            li.tree-empty > .toggler:before { content: " "; }
+            li.tree-closed > .toggler:before {
+                content: "";
+                height: 0;
+                width: 0;
+                border-color: transparent blue;
+                border-style: solid;
+                border-width: 0.25em 0 0.25em 0.5em;
+            }
+            li.tree-opened > .toggler:before {
+                content: "";
+                height: 0;
+                width: 0;
+                border-color: blue transparent ;
+                border-style: solid;
+                border-width: 0.5em 0.25em 0 0.25em;
+            }
+            </style>
     <body>
-        <div id="surveyElement" style="position=absolute;display:block;width:50%;"></div>
-   
-       </body>
+        <div data-role="page" id="surveyElement" style="width:100%;"></div>
+        
+        <button id="back" onclick="onBack()">Back</button>
+        <button id="min" onclick="showMinimalExplanation()">How can I be compliant?</button>
+        <div>
+        <div data-role="page" data-transition="pop" id="surveyResult" class="prolog-runners" style-"display:inline-block; height=100px !important;"> 
+        </div> 
+        <div id="minimal">
+
+        </div> 
+    </div>
+        <script type="text/javascript" src="./min_expl_english.js"></script>      
+        <script type="text/javascript" src="./human_tree.js"></script>
+        <script type="text/javascript" src="./pengines.js"></script>
+         <script src="./survey_json.js" type="text/javascript"></script>
+         <script type="text/javascript" src="./index.js"></script>
+         <script type="text/javascript" src="./format_tree.js"></script>
+         <script type="text/javascript" src="./justification.js"></script>
+         <script type="text/javascript" src="./process_model.js"></script>
+         
+        </body>
 </html>
